apps/plantsuite/controlstation/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plantsuite-controlstation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plantsuite-controlstation
  template:
    metadata:
      labels:
        app: plantsuite-controlstation
        app.kubernetes.io/name: plantsuite-controlstation
        app.kubernetes.io/version: 0.1.0-alpha.116
        version: 0.1.0-alpha.116
    spec:
      containers:
        - name: plantsuite-controlstation
          image: plantsuite.azurecr.io/plantsuite-controlstations:0.1.0-alpha.116
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            timeoutSeconds: 3
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            timeoutSeconds: 3
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 3
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 30          
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
        - name: plantsuite-acr
