apps/plantsuite/controlstation/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: controlstation
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: plantsuite-controlstation
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
